# routes/api.php
@@ -58,6 +58,7 @@ Route::prefix('v1')->group(function () {
             Route::post('/users', [UserApiController::class, 'store']);
             Route::get('/users/{id}', [UserApiController::class, 'show']);
             Route::put('/users/{id}', [UserApiController::class, 'update']);
+            Route::delete('/users/{id}', [UserApiController::class, 'destroy']);
             Route::get('/users/{id}/status', [UserApiController::class, 'status']);
 
             // Dealerships
@@ -65,6 +66,7 @@ Route::prefix('v1')->group(function () {
             Route::post('/dealerships', [DealershipController::class, 'store']);
             Route::get('/dealerships/{id}', [DealershipController::class, 'show']);
             Route::put('/dealerships/{id}', [DealershipController::class, 'update']);
+            Route::delete('/dealerships/{id}', [DealershipController::class, 'destroy']);
 
             // Shifts
             Route::get('/shifts', [ShiftController::class, 'index']);
